--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
-#  - "nightly"
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests
+# codecov support
+before_install:
+  pip install codecov
+after_success:
+  codecov
