--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
-  - "3.7"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+- pip install -r requirements.txt
 # command to run tests
-script: "nosetests -v --with-coverage --cover-package=BDMesh"
+script:
+- python setup.py build_ext --inplace &&
+  nosetests -v --with-coverage --cover-package=BDMesh
 # codecov support
 before_install:
-  pip install codecov
+- pip install codecov
 after_success:
-  codecov
+- codecov
